* type=tag actions=delete 'filter=(object is.unused) | bugfix for group-tag used in Rules, reference missing
* introduce GroupTagRulecontainer - to fix type=tag-merger issue if group-tag is used
* class PANConf - bugfix for type=stats on FW config for tmp/ghost object count on 'shared'
* type=XYZ outputformatset=setcommand.txt | bugfix to always have correct xPath availalble for set commands

GENERAL:
* develop pan-os-php-api | per default enable shadow-json checkbox  - with shadow-nojson, output has a bug and filter are not working correctly - fixing later


2.1.15 (20230830)
UTIL:

BUGFIX:
* type=address/service 'filter=(object is.unused/is.unused.recursive) | overwritten objects used at higher DG level are now also used
* bugfix to create correct XML file Increament for prettyXML - so that it is identical to Panorama / Firewall created config
* README.md - fix broken links

GENERAL:


2.1.14 (20230829)
UTIL:
type=rule actions=display | introduction of argument actions=display:hitcount,ApplicationSeen

BUGFIX:
* type=vendor-migration | general bugfix to use correct baseconfig file if no argument in= is defined
* class AddressGroup | bugfix for missing function type() - related to type=address actions=move
* type=rule location=DG1 'actions=move:DG2,pre' - no rulename change
* class AddressCommon | bugfix if rule is already deleted - AddressRuleContainer is NULL => type=rule actions=removeWhereUsed
* type=rule | bugfix for actions=exporttoexcel - to correctly display columns

GENERAL:
* update to  App-ID version: 8748-8241


2.1.13 (20230810)
UTIL:
* type=address | introduction of actions=upload-address-2cloudmanager:panorama.xml,DGname && actions=upload-addressgroup-2cloudmanager:panorama.xml,DGname
* type=address actions=upload-address-2cloudmanager | extend validation if object name is already available
* type=servicegroup-merger | introduce validation extension for childDG merger
* type=rule-compare | exend with argument 'keepJSONfile1' and 'reuseJSONfile1'