@@ -19,6 +19,7 @@ BUGFIX:
 * introduce GroupTagRulecontainer - to fix type=tag-merger issue if group-tag is used
 * class PANConf - bugfix for type=stats on FW config for tmp/ghost object count on 'shared'
 * type=XYZ outputformatset=setcommand.txt | bugfix to always have correct xPath availalble for set commands
+* bugfix - related to TAG objects where name include character '(' and/or ')' - final fix for tag-merger including method createTag()
 
 GENERAL:
 * develop pan-os-php-api | per default enable shadow-json checkbox  - with shadow-nojson, output has a bug and filter are not working correctly - fixing later
